--- a/index.html
+++ b/index.html
@@ -1,113 +1,179 @@
 <!DOCTYPE html>
-<html lang="vi">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HACKER AI CALCULATOR</title>
-    <style>
-        body {
-            background-color: #000;
-            color: #0f0;
-            font-family: 'Courier New', Courier, monospace;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            margin: 0;
-            overflow: hidden;
-            text-shadow: 0 0 5px #0f0;
-        }
-        .container {
-            border: 2px solid #0f0;
-            padding: 30px;
-            background: rgba(0, 20, 0, 0.9);
-            box-shadow: 0 0 20px #0f0;
-            width: 350px;
-            text-align: center;
-        }
-        h2 { margin-bottom: 20px; letter-spacing: 5px; }
-        .input-group { margin-bottom: 15px; }
-        input {
-            background: #000;
-            border: 1px solid #0f0;
-            color: #0f0;
-            padding: 10px;
-            width: 50px;
-            text-align: center;
-            font-size: 1.2rem;
-            outline: none;
-        }
-        button {
-            background: #0f0;
-            color: #000;
-            border: none;
-            padding: 10px 20px;
-            cursor: pointer;
-            font-weight: bold;
-            text-transform: uppercase;
-            transition: 0.3s;
-        }
-        button:hover { background: #003300; color: #0f0; }
-        #result {
-            margin-top: 20px;
-            font-size: 1.5rem;
-            min-height: 40px;
-            border-top: 1px solid #0f0;
-            padding-top: 10px;
-        }
-        .cursor { animation: blink 1s infinite; }
-        @keyframes blink { 0%, 100% { opacity: 1; } 50% { opacity: 0; } }
-    </style>
+<meta charset="UTF-8">
+<title>HUY MANH GAME</title>
+
+<script type="module">
+import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
+import { getAuth, createUserWithEmailAndPassword, signInWithEmailAndPassword, signOut } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js";
+import { getFirestore, doc, setDoc, getDoc, updateDoc, collection, getDocs, query, orderBy, limit } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
+
+const firebaseConfig = { YOUR_CONFIG_HERE };
+
+const app = initializeApp(firebaseConfig);
+const auth = getAuth();
+const db = getFirestore();
+
+let userId=null;
+let coin=0;
+
+// REGISTER
+window.register=async()=>{
+ await createUserWithEmailAndPassword(auth,email.value,password.value);
+ alert("Đăng ký thành công!");
+}
+
+// LOGIN
+window.login=async()=>{
+ let res=await signInWithEmailAndPassword(auth,email.value,password.value);
+ userId=res.user.uid;
+ authBox.style.display="none";
+ gameArea.style.display="block";
+ loadCoins();
+ loadRank();
+}
+
+// LOGOUT
+window.logout=()=>{signOut(auth);location.reload();}
+
+async function loadCoins(){
+ let snap=await getDoc(doc(db,"users",userId));
+ if(snap.exists()){coin=snap.data().coin;}
+ else{await setDoc(doc(db,"users",userId),{coin:0});}
+ coins.innerText=coin;
+}
+
+async function addCoin(x){
+ coin+=x;
+ coins.innerText=coin;
+ await updateDoc(doc(db,"users",userId),{coin});
+ loadRank();
+}
+
+// RANK
+async function loadRank(){
+ let q=query(collection(db,"users"),orderBy("coin","desc"),limit(5));
+ let snap=await getDocs(q);
+ rank.innerHTML="";
+ snap.forEach(d=>{
+  rank.innerHTML+=`<div>👤 ${d.id.slice(0,6)} : ${d.data().coin} xu</div>`;
+ });
+}
+
+// 🦖 DINO GAME
+window.startDino=()=>{
+ let ctx=game.getContext("2d");
+ let dinoY=220, vy=0, gravity=1;
+ let obstacles=[], coinsArr=[];
+ document.onkeydown=()=>{ if(dinoY>=220) vy=-15; }
+
+ setInterval(()=>{
+  ctx.clearRect(0,0,600,300);
+  vy+=gravity; dinoY+=vy;
+  if(dinoY>220){dinoY=220; vy=0;}
+  ctx.fillStyle="#0f0"; ctx.fillRect(50,dinoY,30,30);
+
+  if(Math.random()<0.02) obstacles.push({x:600});
+  if(Math.random()<0.02) coinsArr.push({x:600,y:Math.random()*200+50});
+
+  obstacles.forEach(o=>{
+    o.x-=5;
+    ctx.fillStyle="red"; ctx.fillRect(o.x,240,20,40);
+    if(o.x<80 && o.x>40 && dinoY>200) alert("Thua!");
+  });
+
+  coinsArr.forEach(c=>{
+    c.x-=5;
+    ctx.fillStyle="yellow"; ctx.beginPath(); ctx.arc(c.x,c.y,8,0,6.28); ctx.fill();
+    if(c.x<80 && c.x>40 && Math.abs(c.y-dinoY)<40){addCoin(5);}
+  });
+
+ },30);
+}
+
+// 🧩 MAZE GAME
+window.startMaze=()=>{
+ let size=10;
+ let maze=Array.from({length:size},()=>Array(size).fill(1));
+ function carve(x,y){
+  maze[y][x]=0;
+  [[2,0],[-2,0],[0,2],[0,-2]].sort(()=>Math.random()-0.5).forEach(([dx,dy])=>{
+   let nx=x+dx, ny=y+dy;
+   if(nx>0&&ny>0&&nx<size-1&&ny<size-1&&maze[ny][nx]==1){
+    maze[y+dy/2][x+dx/2]=0;
+    carve(nx,ny);
+   }
+  });
+ }
+ carve(1,1);
+ alert("Thoát mê cung thành công! +500 xu");
+ addCoin(500);
+}
+</script>
+
+<style>
+body{margin:0;background:black;color:#00ff66;font-family:Arial;text-align:center;overflow:hidden}
+h1{font-size:50px;text-shadow:0 0 20px #0f0}
+.box{border:2px solid #0f0;width:350px;margin:40px auto;padding:20px;background:#050505;box-shadow:0 0 20px #0f0}
+input,select{width:90%;padding:10px;margin:8px;background:black;border:1px solid #0f0;color:#0f0}
+button{padding:10px 15px;margin:5px;background:#0f0;border:none;cursor:pointer}
+canvas{border:2px solid #0f0;margin-top:10px}
+#matrix{position:fixed;top:0;left:0;z-index:-1}
+</style>
 </head>
 <body>
 
-<div class="container">
-    <h2>AI_SYSTEM_v2.6</h2>
-    <div class="input-group">
-        <input type="number" id="A" placeholder="A">
-        <input type="number" id="B" placeholder="B">
-        <input type="number" id="C" placeholder="C">
-        <input type="number" id="D" placeholder="D">
-    </div>
-    <button onclick="calculate()">EXECUTE</button>
-    <div id="result">WAITING FOR DATA...<span class="cursor">_</span></div>
+<canvas id="matrix"></canvas>
+<h1>HUY MANH</h1>
+
+<div id="authBox" class="box">
+<input id="email" placeholder="Email">
+<input id="password" type="password" placeholder="Mật khẩu">
+<button onclick="register()">Đăng ký</button>
+<button onclick="login()">Đăng nhập</button>
+</div>
+
+<div id="gameArea" style="display:none">
+<h2>Xu: <span id="coins">0</span></h2>
+<button onclick="startDino()">Game Khủng Long</button>
+<button onclick="startMaze()">Game Mê Cung</button>
+<button onclick="logout()">Đăng xuất</button>
+
+<canvas id="game" width="600" height="300"></canvas>
+
+<div class="box">
+<h3>Bảng Xếp Hạng</h3>
+<div id="rank"></div>
+</div>
+
+<div class="box">
+<h3>Rút tiền</h3>
+<input placeholder="Họ và tên">
+<select><option>Vietcombank</option><option>MBBank</option></select>
+<input placeholder="Số tiền (min 20000 xu)">
+<button>RÚT</button>
+</div>
 </div>
 
 <script>
-    // Hàm rút gọn số thành 1 chữ số (Digital Root)
-    function reduceToSingleDigit(num) {
-        if (num === 0) return 0;
-        return (num - 1) % 9 + 1;
-    }
-
-    function calculate() {
-        const a = parseInt(document.getElementById('A').value) || 0;
-        const b = parseInt(document.getElementById('B').value) || 0;
-        const c = parseInt(document.getElementById('C').value) || 0;
-        const d = parseInt(document.getElementById('D').value) || 0;
-
-        // Xử lý C và D trước
-        let cReduced = reduceToSingleDigit(c);
-        let dReduced = reduceToSingleDigit(d);
-
-        // Cộng A với C_mới, B với D_mới
-        let resAC = reduceToSingleDigit(a + cReduced);
-        let resBD = reduceToSingleDigit(b + dReduced);
-
-        // Tổng cuối cùng
-        let finalSum = resAC + resBD;
-
-        const resultDiv = document.getElementById('result');
-        resultDiv.innerHTML = "ANALYZING...";
-
-        setTimeout(() => {
-            if (finalSum % 2 === 0) {
-                resultDiv.innerHTML = "RESULT: <span style='color: #00ffff'>CÁI</span>";
-            } else {
-                resultDiv.innerHTML = "RESULT: <span style='color: #ff0000'>CON</span>";
-            }
-        }, 800);
-    }
+// MATRIX EFFECT
+let c=document.getElementById("matrix");
+let ctx=c.getContext("2d");
+c.width=window.innerWidth; c.height=window.innerHeight;
+let letters="01";
+let drops=Array(200).fill(1);
+setInterval(()=>{
+ ctx.fillStyle="rgba(0,0,0,0.05)";
+ ctx.fillRect(0,0,c.width,c.height);
+ ctx.fillStyle="#0f0";
+ drops.forEach((y,i)=>{
+  let text=letters[Math.floor(Math.random()*letters.length)];
+  ctx.fillText(text,i*10,y*10);
+  if(y*10>c.height&&Math.random()>0.95)drops[i]=0;
+  drops[i]++;
+ });
+},33);
 </script>
 
 </body>
